# trackaboo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  openapi.yaml  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.claude/skills/: senior-architect.md  senior-code-reviewer.md  senior-python-engineer.md  senior-release-engineer.md  senior-vue3-engineer.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  category.py  inflow.py  outflow.py
backend/app/routers/: categories.py  health.py  inflows.py  metrics.py  outflows.py
backend/app/schemas/: __init__.py  category.py  inflow.py  metrics.py  outflow.py
backend/tests/: conftest.py  test_categories.py  test_health.py  test_inflows.py  test_metrics.py  test_outflows.py
frontend/: .env.example  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/dashboard/: CategoryBreakdown.vue  MetricCard.vue  MonthSelector.vue
frontend/src/components/inflow/: InflowForm.vue  (+1 more)
frontend/src/composables/: useCategories.test.ts  useCategories.ts  useInflows.ts  useMetrics.test.ts  useMetrics.ts  useOutflows.ts
frontend/src/lib/: formatters.test.ts  formatters.ts
frontend/src/router/: index.ts
frontend/src/stores/: useMonthStore.ts
frontend/src/types/: api.ts
frontend/src/views/: CategoriesView.vue  DashboardView.vue  InflowView.vue  OutflowView.vue
(+16 files in other folders)
