[project]
name = "trackaboo-backend"
version = "0.1.0"
description = "FastAPI backend for Trackaboo personal finance tracker"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
